Screenrecord: exclude dialog from Recents
Change-Id: I08e271590cb8b79d4561ea12d51ac7c3481b7a87
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -310,6 +310,7 @@
         </receiver>
 
         <activity android:name=".screenrecord.ScreenRecordDialog"
+            android:excludeFromRecents="true"
             android:theme="@style/ScreenRecord" />
         <service android:name=".screenrecord.RecordingService" />
 
