Fix protected broadcast error for doze intents
12-12 18:59:57.372  1236 14569 E ActivityManager: Sending non-protected broadcast com.android.systemui.doze.pulse from system 1807:com.android.systemui/u0a112 pkg com.android.systemui
12-12 18:59:57.372  1236 14569 E ActivityManager: java.lang.Throwable
12-12 18:59:57.372  1236 14569 E ActivityManager:       at com.android.server.am.ActivityManagerService.checkBroadcastFromSystem(ActivityManagerService.java:14779)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at com.android.server.am.ActivityManagerService.broadcastIntentLocked(ActivityManagerService.java:15425)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at com.android.server.am.ActivityManagerService.broadcastIntentLocked(ActivityManagerService.java:14796)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at com.android.server.am.ActivityManagerService.broadcastIntent(ActivityManagerService.java:15567)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at android.app.IActivityManager$Stub.onTransact(IActivityManager.java:1950)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at com.android.server.am.ActivityManagerService.onTransact(ActivityManagerService.java:2741)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at android.os.Binder.execTransactInternal(Binder.java:1021)
12-12 18:59:57.372  1236 14569 E ActivityManager:       at android.os.Binder.execTransact(Binder.java:994)

Change-Id: If0c14579091364df665135e2de634b0f0bec1adf
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -259,6 +259,9 @@
     <protected-broadcast android:name="com.google.android.systemui.smartspace.EXPIRE_EVENT"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.CLICK_EVENT"/>
 
+    <!-- Permission to broadcast doze intents -->
+    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
